--- a/q1/report.ipynb
+++ b/q1/report.ipynb
@@ -1,19 +1,315 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "language_info": {
-   "name": "python"
+  "cells": [
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np \n",
+        "from prophet import Prophet\n",
+        "from statsmodels.tsa.arima.model import ARIMA\n",
+        "from keras.models import Sequential\n",
+        "from keras.layers import Dense, LSTM\n",
+        "\n",
+        "df = pd.read_csv('./data/dataset.csv')\n",
+        "\n",
+        "# Split into train and test\n",
+        "train = df[df['count'] != '?']\n",
+        "test = df[df['count'] == '?']\n"
+      ],
+      "metadata": {
+        "id": "nxWobCwrD7zZ"
+      },
+      "execution_count": 137,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "train['count'] = pd.to_numeric(train['count'], errors='coerce')\n",
+        "train = train.dropna(subset=['count'])\n",
+        "\n",
+        "train['count'] = train['count'].astype(int)\n",
+        "\n",
+        "\n",
+        "model_arima = ARIMA(train['count'], order=(1, 1, 1))  \n",
+        "model_arima_fit = model_arima.fit()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YQhl5B5bE-D4",
+        "outputId": "52b7d46e-16f4-4d46-d5d7-e59e668f5b63"
+      },
+      "execution_count": 138,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-138-9dd5b5b2b123>:1: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  train['count'] = pd.to_numeric(train['count'], errors='coerce')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# Fit Prophet model \n",
+        "train_pr = train.rename(columns={'date': 'ds', 'count': 'y'})\n",
+        "\n",
+        "test_x = test.drop(columns=['count'])\n",
+        "\n",
+        "test_pr = test_x.rename(columns={'date': 'ds'})\n",
+        "\n",
+        "model_prophet = Prophet()\n",
+        "\n",
+        "model_prophet.fit(train_pr)\n",
+        "\n",
+        "# Fit LSTM model\n",
+        "train_seq = train['count'].values\n",
+        "test_seq = test['date'].values\n",
+        "n_input = 1   # Number of time points to use for prediction\n",
+        "\n",
+        "model_lstm = Sequential()\n",
+        "model_lstm.add(LSTM(50, activation='relu', input_shape=(n_input, 1)))\n",
+        "model_lstm.add(Dense(1))\n",
+        "model_lstm.compile(optimizer='adam', loss='mse')\n",
+        "model_lstm.fit(train_seq[:-n_input].reshape(-1,n_input,1), train_seq[n_input:], epochs=100, verbose=0)\n",
+        "\n",
+        "# Make predictions\n",
+        "preds_arima = model_arima_fit.forecast(test.shape[0])[:test.shape[0]] \n",
+        "preds_prophet = model_prophet.predict(test_pr)['yhat'][:test.shape[0]].values\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XnfMkuQuHKDw",
+        "outputId": "21014df9-869e-4d34-825f-222a6a8ddbdc"
+      },
+      "execution_count": 139,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "INFO:prophet:Disabling yearly seasonality. Run prophet with yearly_seasonality=True to override this.\n",
+            "INFO:prophet:Disabling daily seasonality. Run prophet with daily_seasonality=True to override this.\n",
+            "DEBUG:cmdstanpy:input tempfile: /tmp/tmpmps_m5p8/suoxezwr.json\n",
+            "DEBUG:cmdstanpy:input tempfile: /tmp/tmpmps_m5p8/8r0ftko1.json\n",
+            "DEBUG:cmdstanpy:idx 0\n",
+            "DEBUG:cmdstanpy:running CmdStan, num_threads: None\n",
+            "DEBUG:cmdstanpy:CmdStan args: ['/usr/local/lib/python3.10/dist-packages/prophet/stan_model/prophet_model.bin', 'random', 'seed=10722', 'data', 'file=/tmp/tmpmps_m5p8/suoxezwr.json', 'init=/tmp/tmpmps_m5p8/8r0ftko1.json', 'output', 'file=/tmp/tmpmps_m5p8/prophet_modelz6kewqls/prophet_model-20230601092246.csv', 'method=optimize', 'algorithm=lbfgs', 'iter=10000']\n",
+            "09:22:46 - cmdstanpy - INFO - Chain [1] start processing\n",
+            "INFO:cmdstanpy:Chain [1] start processing\n",
+            "09:22:46 - cmdstanpy - INFO - Chain [1] done processing\n",
+            "INFO:cmdstanpy:Chain [1] done processing\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_x.head()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "id": "ewS3Aw8zOGul",
+        "outputId": "1e7ad3fa-c192-4663-fc9f-4fd8561f9aed"
+      },
+      "execution_count": 140,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "           date\n",
+              "355  12/22/1988\n",
+              "356  12/23/1988\n",
+              "357  12/24/1988\n",
+              "358  12/25/1988\n",
+              "359  12/26/1988"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-0ca6b18b-115e-4f53-b715-61777dd16252\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>date</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>355</th>\n",
+              "      <td>12/22/1988</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>356</th>\n",
+              "      <td>12/23/1988</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>357</th>\n",
+              "      <td>12/24/1988</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>358</th>\n",
+              "      <td>12/25/1988</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>359</th>\n",
+              "      <td>12/26/1988</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0ca6b18b-115e-4f53-b715-61777dd16252')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-0ca6b18b-115e-4f53-b715-61777dd16252 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-0ca6b18b-115e-4f53-b715-61777dd16252');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 140
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_x_lstm = test.drop(['date'], axis=1).values\n",
+        "# preds_lstm = model_lstm.predict(test_x_lstm)\n",
+        "\n",
+        "# Ensemble \n",
+        "# TODO add + preds_lstm\n",
+        "preds = (preds_arima + preds_prophet)/2\n",
+        "\n",
+        "# Create submission \n",
+        "submission = pd.DataFrame({'count': preds})\n",
+        "submission['count'] = submission['count'].astype(int)\n",
+        "submission.to_csv('submission.csv', index=False)"
+      ],
+      "metadata": {
+        "id": "Zf3OVYzZOFBw"
+      },
+      "execution_count": 142,
+      "outputs": []
+    }
+  ],
+  "metadata": {
+    "language_info": {
+      "name": "python"
+    },
+    "orig_nbformat": 4,
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
   },
-  "orig_nbformat": 4
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
